Changed config to open implementation package to unnamed modules for tests.